src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
	.btn-base {
		@apply flex cursor-pointer items-center justify-center gap-2 rounded-md px-3 py-2 text-sm shadow-md transition-all duration-75 md:px-4 md:py-2 md:text-base;
		@apply disabled:pointer-events-none disabled:cursor-default disabled:border-gray-400;
	}

	.btn-primary {
		@apply bg-indigo-600 font-semibold text-bg disabled:bg-indigo-200 disabled:text-gray-400;
		@apply hover:bg-indigo-500 hover:text-bg;
	}
	.btn-secondary {
		@apply bg-fg text-bg disabled:bg-gray-200 disabled:text-gray-400;
		@apply hover:bg-slate-700 hover:text-bg;
	}
	.btn-success {
		@apply bg-green-300 disabled:bg-green-50 disabled:text-gray-400;
		@apply hover:bg-green-400;
	}
	.btn-danger {
		@apply bg-red-600 text-bg disabled:bg-gray-200 disabled:text-gray-400;
		@apply hover:bg-red-500 hover:text-bg;
	}
	.btn-info {
		@apply bg-blue-200 disabled:bg-blue-100 disabled:text-gray-400;
		@apply hover:bg-blue-300;
	}
	.btn-default {
		@apply border border-slate-400 bg-white text-fg disabled:bg-gray-200 disabled:text-gray-400;
		@apply hover:bg-slate-50;
	}

	.btn-group {
		@apply mt-5 flex items-center justify-center gap-6;
	}

	.input {
		@apply w-full rounded-md border bg-white p-3 shadow-md outline-none focus-within:border-indigo-500;
	}
}

html,
body {
	@apply text-fg;
	@apply bg-bg;
}

*,
*::before,
*::after {
	@apply font-sans;
	@apply box-border;
}

a {
	@apply cursor-pointer no-underline;

	&:hover {
		@apply text-indigo-800;
	}
}

